--- a/univit/src/components/Login.css
+++ b/univit/src/components/Login.css
@@ -2,6 +2,11 @@
   display: flex;
 }
 
+.form{
+  margin:0;
+  padding:0;
+}
+
 .form_pass {
   display: flex;
 }
@@ -26,6 +31,7 @@
   vertical-align: middle;
   position: relative;
   top: 7rem;
+  margin:0;
   /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
   /* width: 12rem; */
 }
